# LLMGuardian

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CNAME  CONTRIBUTING.md  DASHBOARD_BUILD_SUMMARY.md  DASHBOARD_QUICKSTART.md  LICENSE  README.md  REQUIREMENTS.md  _config.yml  app.py  demo_dashboard.py  examples_dashboard.py  pyproject.toml  requirements-full.txt  requirements-hf.txt  requirements-space.txt  requirements.txt  run_dashboard.bat  run_dashboard.ps1  setup.py  setup.sh  test_dashboard_setup.py
.circleci/: config.yml
.github/: CODEOWNERS
.github/workflows/: README.md  ci.yml  docker-publish.yml  filesize.yml  huggingface.yml  security-scan.yml
config/: dashboard_config.yaml
docker/: README.md  dockerfile
docs/: README.md  huggingface.md
page/: _config.yml  index.md
requirements/: base.txt  dashboard.txt  dev.txt  docs.txt  prod.txt  test.txt
scripts/: README.md
src/: README.md
src/llmguardian/: README.md  __init__.py
src/llmguardian/agency/: README.md  __init__.py  action_validator.py  executor.py  permission_manager.py  scope_limiter.py
src/llmguardian/api/: README.md  __init__.py  app.py  models.py  routes.py  security.py
src/llmguardian/cli/: README.md  cli_interface.py
src/llmguardian/core/: README.md  __init__.py  config.py  events.py  exceptions.py  logger.py  monitoring.py  rate_limiter.py  security.py  validation.py
src/llmguardian/dashboard/: README.md  README_FULL.md  app.py
src/llmguardian/data/: __init__.py  leak_detector.py  poison_detector.py  (+1 more)
tests/: conftest.py
tests/data/: test_privacy_guard.py
tests/unit/: test_prompt_injection_scanner.py
tests/utils/: test_utils.py
(+25 files in other folders)
